GuestViewMessageFilter should update the embedder web contents before attach.

GuestViewMessageFilter::OnAttachToEmbedderFrame() up until now assumed
the guest was created with the WebContents* that will be the final owner.
This works for WebViews created in static HTML or from JS in the
embedder, but can fail if window.open is used, and the embedder
web contents may be created along with the new window.

This function should instead look up the embedder WebContents* from
the provided embedder local frame id, and use that to override in the
call to GuestViewBase::WillAttach().

Bug: 777839
Change-Id: I4a33ecf3aaab6dbd645835191247670a3dccd1f3
Reviewed-on: https://chromium-review.googlesource.com/738278
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512399}
Former-commit-id: a21ff3d498fdbdc0114fad1cdd127f7675614eb5